# depth_estimation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md  baseline.json  exp_bilateral_segments_400_700.json  exp_bilateral_segments_grid.json  exp_global_local_nyu.json  exp_global_nyu.json  exp_inr_compare.json  exp_local_none_segments_grid.json  exp_local_smoothing_nyu20.json  segments_sweep.json  smooth_sweep.json
depth_estimation/: __init__.py
depth_estimation/calibration/: __init__.py  global_baseline.py  inr_calibration.py  local_calibration.py  methods.py
depth_estimation/evaluation/: __init__.py  experiment.py  metrics.py  visualization.py
depth_estimation/models/: __init__.py  da_inference.py
scripts/: __init__.py  compare_experiments.py  download_kitti.py  download_nyu.py  run_depth_anything.py  run_experiment.py
